--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "mongoengine (>=0.29.1,<0.30.0)",
-    "pymongo (>=4.12.0,<5.0.0)"
+    "pymongo (>=4.12.0,<5.0.0)",
+    "pika (>=1.3.2,<2.0.0)",
+    "faker (>=37.1.0,<38.0.0)"
 ]
 
 
